# sStatics

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py  test.tex
doc/: Makefile  make.bat
doc/source/: api.html  api.rst  conf.py  contributing.rst  custom.css  examples.rst  explanation.rst  gui.rst  howto_bar.rst  howto_nodes.rst  howtoguide.rst  index.html  index.rst  installation.rst  license.rst  postprocessing_methods.rst  preprocessing_methods.rst  solution.rst  theoretical.rst  tutorials.rst  uml.rst
doc/source/api/: calc_methods.rst  postprocessing_methods.rst  preprocessing_methods.rst  solution.rst
doc/source/how_to/: bar.rst  cross_section.rst  nodes.rst
doc/source/rst/: getting_started.rst  node_deflection_old.rst  transforming_system.rst
sstatics/: __init__.py  __main__.py  core.py  graphic_objects.py  plot.py  tests.py
sstatics/core/: __init__.py  bar.py  cross_section.py  dof.py  loads.py  logger_mixin.py  material.py  methods.py  node.py  results.py  system.py  temperature.py  utils.py
sstatics/core/calc_methods/: __init__.py  dmg.py  first_order.py  force_method.py  influence_line.py  principle_of_virtual_force.py  reduction_theorem.py  second_order.py  static_methods.py
sstatics/core/geometry/: objects.py  operation.py
sstatics/core/postprocessing/: __init__.py  bar_stress_disc.py  bending_line.py  cross_section_stress.py  differential_equation.py  differential_equation_second_order.py  equation_of_work.py  results.py  rigid_body_motion.py  stress.py
sstatics/core/preprocessing/: __init__.py  bar.py  cross_section.py  dof.py  loads.py  material.py  modifier.py  node.py  poleplan.py  (+3 more)
sstatics/examples/: advanced_poleplan.py  bending_moment.py  cross_section_beam_slab.py  cross_section_h_shaped.py  poleplan.py  second_order_cantilever.py  unstable_system.py
sstatics/frontend/: app.py  components.py  sstatic_test2.py
sstatics/graphic_objects/: __init__.py  bar.py  cross_section.py  diagram.py  geometry.py  hinges.py  loads.py  node.py  poleplan.py  results.py  stress.py  supports.py  system.py  utils.py
sstatics/t/: test_model.py
(+116 files in other folders)
