[build-system]
requires = ["setuptools >= 74.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sstatics"
version = "0.0.0"
dependencies = [
    "dash~=2.18",
    "dash-bootstrap-components~=1.6",
    "numpy~=2.1",
    "sympy~=1.13",
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "flake8>=7.1.1",
    "numpydoc>=1.8.0",
    "pylint>=3.1.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.setuptools.packages]
find = {}

[tool.pylint.'MESSAGES CONTROL']
errors-only = "True"