[build-system]
requires = ["setuptools >= 74.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sstatics"
version = "0.1.0"
dependencies = [
    "numpy~=2.3",
    "sympy~=1.14",
    "matplotlib~=3.10",
    "plotly~=5.24.1",
    "shapely~=2.1",
    "tabulate~=0.9.0"
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "flake8==7.1.1",
    "numpydoc==1.8.0",
    "jupyterlab==4.4.9",
    "pandas==2.3.2",
    "pylint==3.1.1",
    "sphinx==8.1.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-book-theme==1.1.4",
    "sphinx-copybutton==0.5.2",
    "nbsphinx==0.9.7"
]

[tool.setuptools.packages]
find = {}

[tool.pylint.'MESSAGES CONTROL']
errors-only = "True"